k8s-manifests/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smartpg-dev
  labels:
    environment: development
